--- a/src/pages/rapports/rapports.html
+++ b/src/pages/rapports/rapports.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header no-border no-shadow>
     <ion-navbar>
       <ion-title>Rapports Mensuels</ion-title>
       <ion-buttons end>
