--- a/src/pages/rendezvous/rendezvous.html
+++ b/src/pages/rendezvous/rendezvous.html
@@ -9,7 +9,10 @@
               </ion-buttons>        
     </ion-navbar>
   </ion-header>
-  <ion-content padding>
+  <ion-content >
+        <ion-card>
+                <ion-card-header text-wrap>Enrégistrer ou modifier un rendez-vous</ion-card-header>
+        </ion-card>      
       <form #form="ngForm" novalidate="novalidate">
           <ion-list>
               <ion-item>
