--- a/src/pages/commendes/commendes.html
+++ b/src/pages/commendes/commendes.html
@@ -1,11 +1,17 @@
-<ion-header>
+<ion-header no-border >
   <ion-navbar>
-    <ion-title >Les ventes</ion-title>
+      <ion-row no-padding>
+          <ion-col> <ion-title >Interactions avec les points de vente</ion-title></ion-col>
+          <ion-col>
+            <ion-searchbar [hidden]="!commendes.length"  [(ngModel)]="queryText" (ionInput)="search()" placeholder="Recherchez un nom">
+            </ion-searchbar>         
+          </ion-col>
+        </ion-row>    
     <ion-buttons end>
-      <button ion-button icon-only (click)="loadRemoteData()">
+      <button ion-button icon-only (click)="refresh()">
         <ion-icon name="refresh"></ion-icon>
       </button>
-      <button ion-button icon-left (click)="add()">
+      <button ion-button icon-left outline (click)="add()">
         <ion-icon name="add"></ion-icon>
         Nouveau
       </button>
@@ -13,36 +19,47 @@
   </ion-navbar>
 </ion-header>
 <ion-content >
-  <div padding>
-    <ion-segment mode="ios" color="primary" [(ngModel)]="target" (ionChange)="search()">
-        <ion-segment-button value="today">
-          Aujourd'hui
-        </ion-segment-button>
-        <ion-segment-button value="thisweek">
-          Cette ce mois
-        </ion-segment-button>      
-        <ion-segment-button value="notended">
-          Non terminées
-        </ion-segment-button>
-    </ion-segment>
-  </div>
-  <ion-searchbar [hidden]="!commendes.length" color="primary" [(ngModel)]="queryText" (ionInput)="search()" placeholder="Recherchez un nom">
-    </ion-searchbar>  
-<ion-list *ngIf="commendes&&commendes.length">
+ <ion-row justify-content-around>
+   <ion-col col-6 >
+    <button ion-button icon-left outline small (click)="openFilter()"><ion-icon name="funnel"></ion-icon> 
+      Critères <span *ngIf="nbrecriteres">  -  ({{nbrecriteres}})</span>
+    </button>
+   </ion-col>
+   <ion-col col-6 class="item-right">
+    <button float-right ion-button icon-left outline small (click)="openMap()" [disabled]="!commendes.length"> <ion-icon name="map" ></ion-icon>Carte</button>
+  </ion-col>   
+ </ion-row>
+<ion-list *ngIf="commendes.length">
   <ion-item-sliding  *ngFor="let commende of commendes"  #slidingItem [hidden]="commende.deleted||commende.hide">
   <ion-item (click)="openCart(commende)" text-wrap>
+    <span>{{commende.id}},  {{commende.date|date:'dd/MM/yyyy' }}</span>
+    <div *ngIf="commende.pointVente&&commende.id">
     <strong>{{commende.pointVente.nom |uppercase}}</strong> -  {{commende.date|date:'dd/MM/yyyy' }}
     <p> {{commende.pointVente.telephone}}<span *ngIf="commende.pointVente.quartier">,{{commende.pointVente.quartier}}</span></p>
     <p> {{commende.pointVente.adresse}} </p>
+  </div>
   </ion-item>
   <ion-item-options side="right" [hidden]="commende.terminated">    
       <button ion-button color="danger" (click)="confirm(commende,slidingItem)">
         <ion-icon name="trash"></ion-icon> supprimer
       </button>          
   </ion-item-options>        
- </ion-item-sliding>  
-</ion-list>  
+ </ion-item-sliding> 
+ <div padding>
+  <button ion-button block small clear (click)="refresh()" style="text-transform: none;">Afficher plus</button>   
+ </div>  
+</ion-list> 
+<ion-grid style="height: 80%;justify-content: center;position:absolute;top:20%" *ngIf="!commendes.length">
+    <ion-row style="height: 100%;justify-content: center;" justify-content-center align-items-center>
+        <div text-center text-wrap  class="empty" padding>
+          Aucun element correspondant aux critères.
+        </div>
+    </ion-row>
+  </ion-grid>  
 <ion-fab right bottom>
   <button ion-fab color="primary" (click)="add()"><ion-icon name="add" ></ion-icon></button>
 </ion-fab>
 </ion-content>
+<ion-footer >
+    <ion-row><ion-col>{{commendes.length}} lignes</ion-col><ion-col></ion-col><ion-col></ion-col></ion-row>
+  </ion-footer>
