--- a/src/pages/quartiers/quartiers.html
+++ b/src/pages/quartiers/quartiers.html
@@ -1,31 +1,30 @@
 
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-     Selectionnez
-    </ion-title>
-    <ion-buttons start>
+    <ion-navbar>
+    <ion-row no-padding>
+        <ion-col>  <ion-title>Les quartiers</ion-title></ion-col>
+        <ion-col>
+          <ion-searchbar [hidden]="!newQuartiers.length"  [(ngModel)]="queryText" (ionInput)="search()" placeholder="Rechercher">
+          </ion-searchbar>         
+        </ion-col>
+      </ion-row>    
+    <ion-buttons end>
         <button ion-button (click)="dismiss()" icon-left>
-            <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
-            <span color="primary" showWhen="android,ios">Fermer</span>
+            <ion-icon name="md-close" showWhen="android,windows,core"></ion-icon>
+            <span color="primary" showWhen="android,ios,core">Fermer</span>
           </button>
     </ion-buttons>
-  </ion-toolbar>
+  </ion-navbar>
 </ion-header>
 <ion-content >
-     <ion-searchbar color="primary"
-                   [(ngModel)]="queryText"
-                   (ionInput)="search()"
-                   placeholder="Rechercher ou créer un quartier">
-    </ion-searchbar>   
   <ion-list *ngIf="newQuartiers.length" inset>
       <ion-item *ngFor="let quartier of newQuartiers" (click)="dismiss(quartier.nom)" [hidden]="quartier.hide">
         {{quartier.nom}}
       </ion-item>
+      <div  [hidden]="!queryText">
+          <button ion-button   (click)="newQuartier()" block > Créer un quartier 
+              <ion-icon name="add"></ion-icon>
+            </button>
+        </div>      
   </ion-list>
-  <div  [hidden]="!queryText">
-    <button ion-button block  (click)="newQuartier()" block > Créer un quartier 
-        <ion-icon name="add"></ion-icon>
-      </button>
-  </div>
 </ion-content>
