--- a/src/pages/selectclient/selectclient.html
+++ b/src/pages/selectclient/selectclient.html
@@ -1,34 +1,42 @@
-<!--
-  Generated template for the PointventesPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header  no-border no-shadow>
+<ion-header no-border no-shadow>
     <ion-navbar>
-        <ion-buttons left>
-            <button ion-button   style="text-transform: none;" (click)="dismiss()" icon-left>
-                <ion-icon name="close" color="danger"></ion-icon>
-                Annuler
-            </button>           
-        </ion-buttons>       
-      <ion-title>Choisir un client</ion-title>
-      <ion-buttons end>
-          <button ion-button  outline (click)="add()" icon-left>
-              <ion-icon name="add" ></ion-icon>
-              Nouveau
-          </button>           
-      </ion-buttons>    
+        <ion-buttons start>
+            <button ion-button icon-only  (click)="dismiss()" icon-left>
+                <ion-icon name="ios-close" color="danger"></ion-icon>
+            </button>
+        </ion-buttons>
+        <ion-row no-padding>
+                <ion-col><ion-title>Points de vente</ion-title></ion-col>
+                <ion-col>
+                <ion-searchbar *ngIf="pointventes" [hidden]="!pointventes.length" [(ngModel)]="queryText" (ionInput)="search()"
+                        placeholder="Recherchez un nom">
+                </ion-searchbar>       
+                </ion-col>
+              </ion-row>        
+        <ion-buttons end>
+            <button ion-button outline (click)="add()" icon-left>
+                <ion-icon name="md-add"></ion-icon>
+                Créer
+            </button>
+        </ion-buttons>
     </ion-navbar>
-  </ion-header>
-  <ion-content>
-      <ion-searchbar *ngIf="pointventes" [hidden]="!pointventes.length" [(ngModel)]="queryText" (ionInput)="search()" placeholder="Recherchez un nom">
-        </ion-searchbar>     
-      <ion-list>
-          <ion-item #item *ngFor="let pointvente of pointventes"  [hidden]="pointvente.hide" (click)="dismiss(pointvente)">
-              {{pointvente.nom}}
-              <p><span>{{pointvente.telephone}}</span><span *ngIf="pointvente.ville">, {{pointvente.ville}}</span><span *ngIf="pointvente.quartier">, {{pointvente.quartier}}</span></p>
-          </ion-item>
-      </ion-list>
-  </ion-content>
-  
+</ion-header>
+<ion-content>
+        <ion-card>
+                <ion-card-header text-wrap>Selectionnez un point de vente pour enrégistrer une vente</ion-card-header>
+        </ion-card>    
+    <ion-list>
+        <ion-item #item *ngFor="let pointvente of pointventes" [hidden]="pointvente.hide" (click)="dismiss(pointvente)">
+            {{pointvente.nom}}
+            <p><span>{{pointvente.telephone}}</span><span *ngIf="pointvente.ville">, {{pointvente.ville}}</span><span
+                    *ngIf="pointvente.quartier">, {{pointvente.quartier}}</span></p>
+        </ion-item>
+        <div padding>
+            <button ion-button block small clear (click)="doScroll()" style="text-transform: none;">Afficher
+                plus</button>
+        </div>
+    </ion-list>
+</ion-content>
+<ion-footer >
+        <ion-row><ion-col>{{pointventes.length}} lignes</ion-col><ion-col></ion-col><ion-col></ion-col></ion-row>
+</ion-footer>
